--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/fq-brick-wall.jpg" alt="" /></a>
-								<h3><a href="https://github.com/chrismjohnston/Sprint-Challenge--User-Interface">Company Home Page</a></h3>
-								<p>Week 1 Lambda Sprint Project</p>
+								<a href="#" class="image featured"><img src="images/BabyBinary_Alma_960.jpg" alt="" /></a>
+								<h3><a href="https://nasa-daily-photo.chrismjohnston.now.sh/">Nasa Photo of the Day App</a></h3>
+								<!-- <p>Week 1 Lambda Sprint Project</p> -->
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
