--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Here are a few of my projects</h2>
+						<!-- <p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p> -->
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
